--- a/cosyer/index.html
+++ b/cosyer/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0020)https://kuangpf.com/ -->
 <html>
 
 <head>
@@ -111,12 +110,9 @@
         <p>
             <a href="mailto:chenyu@mydearest.cn" target="_blank">Mail</a>
         </p>
-        <!-- <p>
-      <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=qpucmZmZk52Ykpzq29uEycXH" target="_blank">Mail</a>
-    </p> -->
-        <!-- <p>
-      <a href="https://www.zhihu.com/people/KuangPF" target="_blank">知乎</a>
-    </p> -->
+        <p>
+        <a href="tencent://message/?uin=535509852&Site=-&Menu=yes" target="_blank">QQ</a>
+        </p>
     </div>
     <canvas width="1920" height="917"></canvas>
     <!-- <div class="beian">
