--- a/3Dalbum/index.html
+++ b/3Dalbum/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-	<title>HTML5 3D立体图片相册代码</title>
+	<title>3D立体图片相册</title>
 
 	<style type="text/css">
 		html {
