--- a/drag/index.html
+++ b/drag/index.html
@@ -15,6 +15,7 @@
     <p>拖动图片</p>
     <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <img
+      id="img1"
       draddable="true"
       ondragstart="drag(event)"
       src="http://dir.mydearest.cn/static/img/avatar.jpg"
