--- a/funny/index.html
+++ b/funny/index.html
@@ -5,11 +5,11 @@
 		<style>
 
 body{
-	margin:0;
+	    margin:0;
 		padding:0;
 	    display: flex;
 		justify-content: center;
-		align-self: center;
+		align-items: center;
 }
 .box {
 	width:200px;
