--- a/multi-pages/child/index.html
+++ b/multi-pages/child/index.html
@@ -28,7 +28,7 @@
           event => (document.getElementById("receive").innerHTML = event.data)
         );
       }
-
+      main();
       const pre = document.getElementById("code");
 
       if (pre) {
