--- a/multi-pages/index.html
+++ b/multi-pages/index.html
@@ -43,7 +43,7 @@
             .contentWindow.postMessage(value, targetOrigin);
         };
       }
-
+      main();
       const pre = document.getElementById("code");
 
       if (pre) {
