--- a/el-psy-congroo/index.html
+++ b/el-psy-congroo/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="这是一个具有世界线变动率探测仪效果的时钟">
-  <meta name="author" content="sanshiliuxiao,sanshiliuxiao@foxmail.com">
-  <title>这一切都是命运石之门的选择</title>
-  <link rel="stylesheet" href="./index.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="这是一个具有世界线变动率探测仪效果的时钟"
+    />
+    <meta name="author" content="sanshiliuxiao,sanshiliuxiao@foxmail.com" />
+    <title>这一切都是命运石之门的选择</title>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
     <div class="el_psy_congroo">
       <div class="img-wrapper"></div>
       <div class="img-wrapper"></div>
@@ -20,6 +26,6 @@
       <div class="img-wrapper"></div>
       <div class="img-wrapper"></div>
     </div>
-</body>
-<script src="./index.js"></script>
+  </body>
+  <script src="./index.js"></script>
 </html>
