--- a/carousel/index2.html
+++ b/carousel/index2.html
@@ -66,12 +66,6 @@
     </div>
     <script>
       function main() {
-        /*
-         * @Author: saber2pr
-         * @Date: 2019-04-28 20:36:22
-         * @Last Modified by: saber2prpr
-         * @Last Modified time: 2019-04-28 21:39:2901
-         */
         class Slider {
           /**
            * @param {HTMLElement} element
@@ -173,6 +167,7 @@
           }
         });
       }
+      main();
     </script>
   </body>
 </html>
