--- a/love-letter/index.html
+++ b/love-letter/index.html
@@ -38,8 +38,8 @@
       <form class="flip">
         <div class="front">
           <h2>Destination</h2>
-          <p>Jiang's Heart</p>
-          <p>212000 Zhenjiang China</p>
+          <p>Zhou's Heart</p>
+          <p>221000 Xuzhou China</p>
           <a id="flip2back" href="#">Open !</a>
         </div>
         <div id="content" class="back">
