移动端双击配置

--- a/love-letter/index.html
+++ b/love-letter/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="zh-cn">
   <head>
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+    />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>给你的一封信</title>
     <script
@@ -81,7 +85,7 @@
                   <label>To: Miss. Zhou</label>
                 </div>
                 <div>
-                  <label>From: Mr. Shi</label>
+                  <label>From: Mr. Chen</label>
                 </div>
                 <a id="open" href="#content">Open</a>
               </div>
