--- a/drag/index.html
+++ b/drag/index.html
@@ -16,7 +16,7 @@
     <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <img
       id="img1"
-      draddable="true"
+      draggable="true"
       ondragstart="drag(event)"
       src="http://dir.mydearest.cn/static/img/avatar.jpg"
     />
