--- a/we-dog/index.html
+++ b/we-dog/index.html
@@ -304,13 +304,13 @@
           image_counter = 0; // To keep track of the current image
 
         setInterval(function () {
-          $("link[rel='icon']").remove();
-          $("link[rel='shortcut icon']").remove();
-          $("head").append(
-            '<link rel="icon" href="' +
-              favicon_images[image_counter] +
-              '" type="image/jpeg">'
-          );
+          // $("link[rel='icon']").remove();
+          // $("link[rel='shortcut icon']").remove();
+          // $("head").append(
+          //   '<link rel="icon" href="' +
+          //     favicon_images[image_counter] +
+          //     '" type="image/jpeg">'
+          // );
 
           // If last image then goto first image
           // Else go to next image
