--- a/love/2/index.html
+++ b/love/2/index.html
@@ -44,7 +44,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						月,我爱你！
+						zhuzhu,我爱你！
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
@@ -60,7 +60,7 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2017, 10, 21);
+		together.setFullYear(2021, 4, 14);
 		together.setHours(20);
 		together.setMinutes(0);
 		together.setSeconds(0);
